--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,14 +9,28 @@
 
   <body>
     <header>
-      <a href="#">WebStudio</a>
       <nav>
-        <a href="#">Студія</a>
-        <a href="#">Портфоліо</a>
-        <a href="#">Контакти</a>
+        <a href="#">WebStudio</a>
+        <ul>
+          <li>
+            <a href="#">Студія</a>
+          </li>
+          <li>
+            <a href="#">Портфоліо</a>
+          </li>
+          <li>
+            <a href="#">Контакти</a>
+          </li>
+        </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
 
     <main>
@@ -25,6 +39,7 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>Наші основні переваги</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -70,7 +85,7 @@
               width="270"
               height="260"
             />
-            <h4>Ігор Дем'яненко</h4>
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -80,17 +95,17 @@
               width="270"
               height="260"
             />
-            <h4>Ольга Рєпіна</h4>
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="images/marketing.jpg" alt="marketing" width="270" height="260" />
-            <h4>Микола Тарасов</h4>
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="images/designer.jpg" alt="designer" width="270" height="260" />
-            <h4>Михайло Єрмаков</h4>
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -99,9 +114,19 @@
 
     <footer>
       <a href="#">WebStudio</a>
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address>
+        <ul>
+          <li>
+            <a href="#">м. Київ, пр-т Лесі Українки, 26</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
